--- a/src/app/components/utility/image-gallery/image-gallery.component.html
+++ b/src/app/components/utility/image-gallery/image-gallery.component.html
@@ -43,7 +43,7 @@
                 <!-- Update Image button -->
                 <i 
                 class="fa fa-pencil fa-2x icon" 
-                [ngClass]="{'d-none': !userHasUpdatePermission()}" 
+                [ngClass]="{'d-none': !hasImages() || !userHasUpdatePermission()}" 
                 aria-hidden="true" 
                 (click)="enableUpdateState()"
                 ></i>
