Fixed some icon compatibility issues

--- a/src/app/components/utility/quotefield/quotefield.component.html
+++ b/src/app/components/utility/quotefield/quotefield.component.html
@@ -94,7 +94,7 @@
             ></i>
             <!-- Copy to Clipboard -->
             <i 
-            class="fa fa-clipboard fa-1-5x icon mx-3" 
+            class="fas fa-copy fa-1-5x icon mx-3" 
             (click)="copyQuoteToClipboard()"
             title="Copy Quote to Clipboard"
             ></i>
