Adjusted home-page highlighting on hover

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,7 +3,7 @@
     <header id="header">
         <div class="logo">
             <a routerLink="{{ routingService.getRoutePath('quest-overview') }}" class="article-link">
-                <span class="fa fa-diamond fa-2x icon"></span>
+                <span class="fa fa-diamond fa-2x"></span>
             </a>
         </div>
         <div class="content">
