Made focussing highlight things on navbar and home

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -16,7 +16,7 @@
     display: flex;
 }
 
-.navbar a.nav-link:hover{
+.navbar a.nav-link:hover, .navbar a.nav-link:focus{
     background-color: grey;
 }
 
