--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -273,6 +273,12 @@ body.is-preload #header .content .inner {
     font-weight: bold;
 }
 
+.article-link:focus{
+    text-decoration: none;
+    border-bottom: none;
+    background-color: hsla(0,0%,50.2%,.75);
+}
+
 .bold{
     font-weight:bold;
 }
