Stabilized empty search subtitle a bit to not change upon all actions

--- a/src/app/components/articles/search/search.component.html
+++ b/src/app/components/articles/search/search.component.html
@@ -47,6 +47,6 @@
 <ng-template #noSearchResults>
     <div class="my-5 d-flex align-items-center flex-column">
         <h2 class="mb-0">We couldn't find any hits for '{{ searchString }}'</h2>
-        <i> {{ getRandomSubtitle() }}</i>
+        <i> {{ emptySearchSubtitle }}</i>
     </div>
 </ng-template>
