--- a/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
+++ b/src/app/components/articles/session-audio-overview/session-audio-overview.component.html
@@ -36,7 +36,7 @@
                 <div class="card my-3 pointer add-icon-card h-82" routerLink="create">
                     <!-- Card Title -->
                     <div class="card-body d-flex justify-content-center align-items-center">
-                        <i class="fa fa-5x icon fa-plus-square-o" aria-hidden="true"></i> 
+                        <i class="fa fa-5x icon fa-plus" aria-hidden="true"></i> 
                     </div>
                 </div>
             </div>
