--- a/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.html
+++ b/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.html
@@ -1,12 +1,10 @@
 <div class="container px-0" *ngIf="!isUpdating; else waiting">
-    <div class="row mb-5">
-        <div class="col-4"></div>
-        <div class="col-4 btn btn-secondary" (click)="toggleDiaryEntryView()" *ngIf="userHasUpdatePermission() && userHasDeletePermission() && userHasCreatePermission()">
+    <div class="row mb-5 justify-content-center">
+        <div class="col-lg-4 col-md-6 col-12 btn btn-secondary" (click)="toggleDiaryEntryView()" *ngIf="userHasUpdatePermission() && userHasDeletePermission() && userHasCreatePermission()">
             Currently viewing as : 
             <span *ngIf="diaryEntryView"> Diary entry </span>
             <span *ngIf="!diaryEntryView"> Encounter list </span>
         </div>
-        <div class="col-4"></div>
     </div>
 
     <!-- Insert new first Encounter -->
