--- a/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.html
+++ b/src/app/components/utility/diary-entry-encounter-list/diary-entry-encounter-list.component.html
@@ -1,5 +1,5 @@
 <div class="container px-0" *ngIf="!isUpdating; else waiting">
-    <div class="row mb-5 justify-content-center">
+    <div class="d-flex mb-5 justify-content-center">
         <div class="col-lg-4 col-md-6 col-12 btn btn-secondary" (click)="toggleDiaryEntryView()" *ngIf="userHasUpdatePermission() && userHasDeletePermission() && userHasCreatePermission()">
             Currently viewing as : 
             <span *ngIf="diaryEntryView"> Diary entry </span>
