Upgraded to cover more errors and style images

--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -2,9 +2,7 @@
     <h1 class="text-center mb-5"> {{errorContents[errorStatus].title}} </h1>
     <img src="{{errorContents[errorStatus].image}}" alt="" class="center mb-3"/>
 
-    <p class="text-center" [innerHTML]="errorContents[errorStatus].htmlBody | safeHtml"> 
-
-    </p>
+    <p class="text-center" [innerHTML]="errorContents[errorStatus].htmlBody | safeHtml"> </p>
     
     <div>
         <a class="btn btn-secondary" routerLink="{{ routingService.getRoutePath('home1') }}"> 
