--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,7 +101,7 @@ $marker-width: 100px;
 /* Custom Colors */
 body {
     color: #ffffff;
-    font-family: "Source Sans Pro", sans-serif !important;
+    font-family: "Source Sans Pro", sans-serif;
     font-weight: 300;
     font-size: 1rem;
 	line-height: 1.65;
