Added aldrune icon to styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,13 @@ input[type="submit"], button {
     font-family: Source Sans Pro,sans-serif !important;
 }
 
+.aldrune-icon{
+	background: url('https://www.aldrune.com/static/aldrune_icon/favicon-32x32.png');
+	width: 32px;
+	height: 32px;
+	display:block;
+}
+
 .fa{
 	font-style: normal;
 	font-family: FontAwesome !important;
