--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,20 @@
-<app-navbar [outsideClickSubject]="outsideClickSubject"></app-navbar>
+<!-- <app-navbar [outsideClickSubject]="outsideClickSubject"></app-navbar> -->
 <div 
-id="background-div"
-class="d-flex justify-content-center align-items-center pt-4 pb-4"
-(click)="routeToHome($event); closeNavbarMenu($event)"
+(touchstart)="trackSwipeStart($event)"
+(touchmove)="trackSwipeEnd($event)"
+(touchend)="checkForSwipeGesture()"
 >
-    <router-outlet #routerOutlet (click)="closeNavbarMenu($event)"></router-outlet>
+    <app-sidebar
+    [showSidebar]="showSidebarSubject"
+    #sidebar
+    ></app-sidebar>
+    <div 
+    id="background-div"
+    class="d-flex justify-content-center align-items-center pt-4 pb-4"
+    (click)="routeToHome($event); closeNavbarMenu($event)"
+    >
+        <router-outlet #routerOutlet (click)="closeNavbarMenu($event)"></router-outlet>
+    </div>    
 </div>
 
 <!-- BG -->
