Removed a styling that made my life harder from general thingy

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@ class="d-flex"
 
     <div 
     id="background-div"
-    class="d-flex justify-content-center align-items-center pt-4 pb-4 w-100"
+    class="d-flex justify-content-center pt-4 pb-4 w-100"
     >
         <router-outlet #routerOutlet></router-outlet>
     </div>    
