--- a/src/app/components/home2/home2.component.scss
+++ b/src/app/components/home2/home2.component.scss
@@ -4,6 +4,8 @@ header{
 
 .main{
     max-width: 40rem;
+    padding-bottom: 2.5rem;
+    max-height: 50vh;
 }
 
 .h-10{
@@ -16,7 +18,6 @@ header{
 
 .h-50{
     height:50%;
-    background-color: green;
 }
 
 .mycolpadding{
@@ -31,8 +32,19 @@ header{
 }
 
 .card-img-top{
-    max-height: 10rem;
+    max-height: 7rem;
     object-fit: contain;
+}
+
+.card-body{
+    overflow: auto;
+    padding: 1rem;
+}
+
+.card-title{
+    height: 3.75rem; /* Must be a multiple of line-height*/
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .card-subtitle{
@@ -162,4 +174,16 @@ input[type="search"]::-webkit-search-results-decoration { display: none; }
 
 .darkyellow{
 	border-color: #e6ae25;
+}
+
+
+@media(max-width: 576px){
+    .card-img-top{
+        max-height: 5rem;
+    }
+
+
+    .card-title{
+        height: 6rem;
+    }
 }
