--- a/src/app/components/utility/colored-sidebar-legend/colored-sidebar-legend.component.html
+++ b/src/app/components/utility/colored-sidebar-legend/colored-sidebar-legend.component.html
@@ -1,16 +1,16 @@
-            <div class="row">
-
-                <div 
-                *ngFor="let option of getArticleOptionNames()" 
-                class="col-lg-2 col-sm-3 col-6 py-2 d-flex align-items-center justify-content-between" 
-                [ngClass]="{'hover-highlight pointer': interactable, 'highlight': filterSettings[option]}"
-                (click)="selectArticleOption(option)"
-                >
-                    <div class="sidebar-border" [ngClass]="coloredSidebar(option.toLowerCase())">
-                        <span class="mx-1"> {{option | titlecase}} </span>
-                    </div>
-                    <i class="fa fa-times" *ngIf="filterSettings[option]"></i>
-                </div>
-                
-            </div>
+<div class="row">
+    <!-- Touchend is necessary here because "click" will fire twice on touch devices-->
+    <div 
+    *ngFor="let option of getArticleOptionNames()" 
+    class="col-lg-2 col-sm-3 col-6 py-2 d-flex align-items-center justify-content-between" 
+    [ngClass]="{'hover-highlight pointer': interactable, 'highlight': filterSettings[option]}"
+    (click)="selectArticleOption(option)"
+    (touchend)="selectArticleOption(option)"
+    >
+        <div class="sidebar-border" [ngClass]="coloredSidebar(option.toLowerCase())">
+            <span class="mx-1"> {{option | titlecase}} </span>
+        </div>
+        <i class="fa fa-times" *ngIf="filterSettings[option]"></i>
+    </div>
     
+</div>
