--- a/src/styles.scss
+++ b/src/styles.scss
@@ -236,10 +236,10 @@ a:hover{
 
 .main{
 	max-width: 60rem;
-	width: 100vw;
+	width: 100%;
     background-color:rgba(27, 31, 34, 0.85);
     border-radius: 6px;
-    padding: 2.5rem 2.5rem 5rem 2.5rem;
+    padding-bottom: 2.5rem;
     color: white;
 	font-size: 18px;
 }
