Fixed minor css issue on mobile
Float right was already taken care of by justify content between

--- a/src/app/components/utility/spell/spell.component.html
+++ b/src/app/components/utility/spell/spell.component.html
@@ -27,7 +27,7 @@
             </div>
         </strong>
 
-        <i class="fa icon float-right" [ngClass]="{'fa-chevron-down': !isOpen, 'fa-chevron-up': isOpen}"></i>
+        <i class="fa icon" [ngClass]="{'fa-chevron-down': !isOpen, 'fa-chevron-up': isOpen}"></i>
     </h5>
 
 
