--- a/src/app/components/home2/home2.component.html
+++ b/src/app/components/home2/home2.component.html
@@ -1,4 +1,6 @@
-<div class="main mx-auto mb-2">
+
+<div class="main">
+    <!-- Heading -->
     <header class="mb-1">
         <div class="d-flex flex-column">
             <i class="aldrune-icon large align-self-center"></i>
@@ -9,10 +11,10 @@
             </strong>
         </div>
     </header>
-
-    <div>
-        <!-- Search Bar -->
-        <form class="flex-1" (submit)="search()">
+    
+    <!-- Search Bar -->
+    <div class="mb-4" id="search-area">
+        <form class="flex-1 p-1" (submit)="search()">
             <div class="d-flex searchbar">
                 <input 
                 class="search-input p-2" 
@@ -30,29 +32,34 @@
 
         </form>
     </div>
-</div>
 
-<div class="container" id="news">
-    <div class="row">
-        <div class="mycolpadding col-6 col-md-4 col-lg-3 col-xl-2 mb-4" *ngFor="let article of recentlyUpdatedArticles">
-            <a 
-            routerLink="{{ article.getAbsoluteRouterUrl() }}" 
-            class="card {{sidebarColor(article.article_type)}}"
-            >
-                <img src="{{ getOverviewImage(article) }}" alt="article image" class="card-img-top">
-                <div class="card-body">
-                    <div class="card-title">
-                        <strong> {{article.name_full}} </strong>
+    <!-- News -->
+    <div class="container" id="news">
+        <h3 class="row justify-content-center">
+            <span class="">Recent Updates</span>
+        </h3>
+        <div class="row">
+            <div class="mycolpadding col-6 col-md-4 col-lg-3 col-xl-2 mb-4" *ngFor="let article of recentlyUpdatedArticles">
+                <a 
+                routerLink="{{ article.getAbsoluteRouterUrl() }}" 
+                class="card {{sidebarColor(article.article_type)}}"
+                >
+                    <img src="{{ getOverviewImage(article) }}" alt="article image" class="card-img-top">
+                    <div class="card-body">
+                        <div class="card-title">
+                            <strong> {{article.name_full}} </strong>
+                        </div>
+                        <div class="card-subtitle mb-2"> 
+                            {{ article.update_date | date }} 
+                            <div class="text-muted"> {{ article.article_type}} </div>
+                        </div>
+                        <div class="card-text">
+                            {{article.description}}
+                        </div>
                     </div>
-                    <div class="card-subtitle mb-2"> 
-                        {{ article.update_date | date }} 
-                        <div class="text-muted"> {{ article.article_type}} </div>
-                    </div>
-                    <div class="card-text">
-                        {{article.description}}
-                    </div>
-                </div>
-            </a>
+                </a>
+            </div>
         </div>
     </div>
+
 </div>
