Specified spinner styles to only apply to corresponding component

--- a/src/app/custom_bootstrap.scss
+++ b/src/app/custom_bootstrap.scss
@@ -182,7 +182,7 @@ button.btn.btn-link:focus{
     text-align: left;
 }
 
-.spinner-border{
+#article-loader-spinner.spinner-border{
     width: 5rem !important;
     height: 5rem !important;
 }
