--- a/src/app/components/articles/item-article/item-article.component.html
+++ b/src/app/components/articles/item-article/item-article.component.html
@@ -1,11 +1,13 @@
 <div class="main">
     <article *ngIf="articleData; else loading" class="container">
-        <!-- TODO: If the first word of a heaidng is too long it overlaps, see how to avoid this -->
-        <app-edit-toggle
-        *ngIf="userHasUpdatePermission()" 
-        [isInUpdateState]=false 
-        [link]="'update'"
-        ></app-edit-toggle>
+        <div class="row" *ngIf="userHasUpdatePermission()">
+            <div class="col-12">
+                <app-edit-toggle 
+                [isInUpdateState]=false 
+                [link]="'update'"
+                ></app-edit-toggle>
+            </div>
+        </div>
 
         <!-- Heading -->
         <div class="row">
