--- a/src/app/components/articles/map/map.component.html
+++ b/src/app/components/articles/map/map.component.html
@@ -1,7 +1,14 @@
 <div class="main" #mapMainCard>
     <article *ngIf="maps && articleData; else loading" class="container">
         <!-- Heading -->
-        <app-edit-toggle></app-edit-toggle>
+        <div class="row" *ngIf="userHasUpdatePermission()">
+            <div class="col-12">
+                <app-edit-toggle 
+                [isInUpdateState]=false 
+                [link]="'update'"
+                ></app-edit-toggle>
+            </div>
+        </div>
         
         <div class="row text-center">
             <h3 class="icon-container col">
