--- a/src/app/components/utility/rule/rule.component.html
+++ b/src/app/components/utility/rule/rule.component.html
@@ -1,12 +1,15 @@
 <div class="card row mb-3 px-4 pt-3 pb-1" [ngClass] = "{'animate__animated animate__fadeInUp': isInCreateState()}" #card>
     <!-- Rules Panel Heading -->
-    <h5 class="pointer col-12 justify-content-between d-flex align-items-center" (click)="toggleCard()" *ngIf="!isInOutdatedUpdateState()"> 
+    <h5 
+    class="pointer col-12 justify-content-between d-flex align-items-center" 
+    (click)="toggleCard()" 
+    *ngIf="!isInOutdatedUpdateState()"> 
         <span>{{ cardData.name }}</span>
-        <i [ngClass]="{'fa icon float-right': true, 'fa-chevron-down': !isOpen, 'fa-chevron-up': isOpen}"></i>
+        <i [ngClass]="{'fa icon': true, 'fa-chevron-down': !isOpen, 'fa-chevron-up': isOpen}"></i>
     </h5>
 
     <!-- Rules Panel Content -->
-    <div class="mb-3" [ngbCollapse]="!isOpen">
+    <div class="mb-3 w-100" [ngbCollapse]="!isOpen">
         <div class="col-12">
             <!-- Separator -->
             <hr class="white-separator mb-2" *ngIf="!isInOutdatedUpdateState()">
@@ -16,7 +19,11 @@
                 <h4 class="d-inline"> {{ cardData.name }}</h4>
         
                 <!-- Edit Toggler -->
-                <div *ngIf="userHasUpdatePermission()" class="btn btn-secondary float-right" (click)="toggleFormState()">
+                <div 
+                *ngIf="userHasUpdatePermission()" 
+                class="btn btn-secondary float-right" 
+                (click)="toggleFormState()"
+                >
                     <i class="fa fa-pencil" *ngIf="isInDisplayState()"></i>
                     <i class="fa fa-times" *ngIf="!isInDisplayState()"></i>
                 </div>
