Disabled all touch events registered for swiping
In general, these might lead to else be recognized as  a second click. That is not my target, so disabled they go.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div 
 (touchstart)="trackSwipeStart($event)"
 (touchmove)="trackSwipeEnd($event)"
-(touchend)="checkForSwipeGesture()"
+(touchend)="checkForSwipeGesture($event)"
 class="d-flex"
 >
     <div class="sidebar-wrapper" [ngClass]="{'swiped-right': showSidebarSubject.getValue(), 'swiped-left': !showSidebarSubject.getValue()}">
