--- a/src/app/components/home2/home2.component.html
+++ b/src/app/components/home2/home2.component.html
@@ -35,8 +35,9 @@
 
     <!-- News -->
     <div class="container" id="news">
-        <h3 class="row justify-content-center">
+        <h3 class="row justify-content-center align-items-center">
             <span class="">Recent Updates</span>
+            <i class="ml-3 spinner-border" *ngIf="!recentlyUpdatedArticles"></i>
         </h3>
         <div class="row">
             <div class="mycolpadding col-6 col-md-4 col-lg-3 col-xl-2 mb-4" *ngFor="let article of recentlyUpdatedArticles">
