Fixed header not disappearing when hovering over card

--- a/src/app/components/home2/home2.component.scss
+++ b/src/app/components/home2/home2.component.scss
@@ -48,10 +48,10 @@ header{
     display: block;
 }
 
-.card:hover .card-img-top,
+.card:hover header,
 .card:hover .card-title,
 .card:hover .card-subtitle{
-    display: none;
+    display: none !important;
 }
 
 
